SERVER-88296 Default to wrapping constants in $const in representative shapes (#20395)

[SERVER-88296](https://jira.mongodb.org/browse/SERVER-88296) Default to
wrapping constants in $const in representative shapes
This flips what was done in
[SERVER-84159](https://jira.mongodb.org/browse/SERVER-84159) so that
serializing raw constants in representative shapes is the exception and
not the default. We will still serialize variadic expressions with raw
constants to address the regression that that ticket resolved.

GitOrigin-RevId: 66a08119aa2cf4beceda047b168211898e09853a