src/mongo/db/pipeline/expression_test.cpp
@@ -3806,7 +3806,9 @@ TEST(ExpressionGetFieldTest, GetFieldSerializesCorrectly) {
                     "field": {
                         "$const": "$foo"
                     },
-                    input: {"?": "?"}
+                    input: {
+                        $const: {"?": "?"}
+                    }
                 }
             }
         })",
@@ -3869,11 +3871,13 @@ TEST(ExpressionGetFieldTest, GetFieldWithDynamicFieldExpressionSerializesCorrect
                             "to": {
                                 "$const": "string"
                             },
-                            "format": "?"
+                            "format": {"$const": "?"}
                         }
                     },
                     "input": {
-                         "?": "?"
+                        "$const": {
+                            "?": "?"
+                        }
                     }
                 }
             }
@@ -3936,7 +3940,9 @@ TEST(ExpressionGetFieldTest, GetFieldWithDynamicFieldExpressionSerializesCorrect
                             }
                         }
                     },
-                    input: {"?": "?"}
+                    input: {
+                        $const: {"?": "?"}
+                    }
                 }
             }
         })",
@@ -3999,7 +4005,9 @@ TEST(ExpressionGetFieldTest, GetFieldWithDynamicFieldExpressionSerializesCorrect
                             }
                         }
                     },
-                    input: {"?": "?"}
+                    input: {
+                        $const: {"?": "?"}
+                    }
                 }
             }
         })",
@@ -4070,8 +4078,8 @@ TEST(ExpressionGetFieldTest, GetFieldWithDynamicFieldExpressionSerializesCorrect
                             }
                         }
                     },
-                    "input": {
-                        "?": "?"
+                    input: {
+                        $const: {"?": "?"}
                     }
                 }
             }
@@ -4121,7 +4129,9 @@ TEST(ExpressionGetFieldTest, GetFieldWithDynamicFieldExpressionSerializesCorrect
             "ignoredField": {
                 "$getField": {
                     "field": "$foo",
-                    "input": {"?": "?"}
+                    input: {
+                        $const: {"?": "?"}
+                    }
                 }
             }
         })",
